2005-02-10  Ben Elliston  <bje@gnu.org>

	* config.guess (amd64:CYGWIN*:*:*): New.
	* testsuite/config-sub.data: Add amd64-cygwin, x86_64-cygwin.
	* testsuite/config-guess.data: Add x86_64-unknown-cygwin test.

2005-02-10  Ben Elliston  <bje@gnu.org>

	* config.guess: Update copyright years.
	* config.sub: Likewise.

2005-01-11  Inderpreet Singh  <inderpreetb@noida.hcltech.com>
	    Ben Elliston  <bje@gnu.org>

	* config.sub: Handle maxq target.
	* testsuite/config-sub.data: Add maxq and maxq-elf tests.

2004-11-30  Melissa Mears  <asterisk@graces.dricas.com>

	* config.sub: Handle xbox alias.
	* testsuite/config-sub.data: Add xbox case.

2004-11-17  Ian Lance Taylor  <ian@wasabisystems.com>
	    Ben Elliston  <bje@gnu.org>

	* config.sub: Recognize xscalee[bl].
	* testsuite/config-sub.data: Add xscale, xscalee[bl] cases.

2004-11-12  Ben Elliston  <bje@gnu.org>

	* config.guess (*:z/VM:*:*): Add new case.
	* config.sub (os): Add case for -zvmoe.
	* testsuite/config-guess.data: Add a test case.
	* testsuite/config-sub.data: Likewise.

2004-11-12  Ben Elliston  <bje@gnu.org>

	* testsuite/config-guess.sh: Use , and not / as the sed delimiter.

2004-11-12  Andris Pavenis <pavenis@latnet.lv>

	* config.sub (djgpp): Alias to i586-pc-msdosdjgpp.
	* testsuite/config-sub.data: Add a test case.
	
2004-10-25  Ben Elliston  <bje@gnu.org>

	* testsuite/config-guess.sh: Reduce recurring tabs into a single
	tab, to allow the test data to be better aligned in columns.

2004-10-25  Ben Elliston  <bje@gnu.org>

	Reported by Monty Solomon <monty@roscom.com>:
	* config.guess (*:XENIX:*:SysV): New.
	* testsuite/config-guess.data: Add a test case.

2004-10-25  Ben Elliston  <bje@gnu.org>

	Reported by Martin Hammer <martin.hammer@siemens.com>:
	* config.guess (DRS?6000:isis:4.2*:7*): New pattern.

2004-09-07  Ben Elliston  <bje@gnu.org>

	* config.guess (frv:Linux:*:*): New.
	* testsuite/config-sub.data: Add cris-linux, frv-linux.